fix: z-index su .release per visibilità label su mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,6 +72,11 @@ header img {
     text-decoration: none;
 }
 
+.release {
+    position: relative;
+    z-index: 2;
+}
+
 .release img {
     display: block;
     width: 100%;
